Don't mark untracked items as 'normal'

Also process untracked files (via git status -u) so that Dolphin can properly
display the version of a file/folder.

BUG: 352625
FIXED-IN: 15.08.2
REVIEW: 125385